// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket-\${random_id.root_mybucket_Id_7C344B74.hex}\\",
        \\"public_access_prevention\\": \\"inherited\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"google_storage_bucket_iam_member\\": {
      \\"root_mybucket_PublicAccessIamMember_53C8A9DA\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_mybucket_E5DAA363.name}\\",
        \\"member\\": \\"allUsers\\",
        \\"role\\": \\"roles/storage.objectViewer\\"
      }
    },
    \\"random_id\\": {
      \\"root_mybucket_Id_7C344B74\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "Id": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "PublicAccessIamMember": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucketIamMember.StorageBucketIamMember",
                      "version": "5.0.2",
                    },
                    "id": "PublicAccessIamMember",
                    "path": "root/Default/my_bucket/PublicAccessIamMember",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket-\${random_id.root_mybucket_Id_7C344B74.hex}\\",
        \\"public_access_prevention\\": \\"enforced\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"random_id\\": {
      \\"root_mybucket_Id_7C344B74\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "Id": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
